--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
   </body>
   <style lang="scss">
     @import "./node_modules/bulma/bulma.sass";
+
+    .columns {
+      margin-top:15px;
+    }
   </style>
 </html>
