--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <div class="container"></div>
     </section>
     <script src="./index.js"></script>
+    <script
+      src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
   </body>
   <style lang="scss">
     @import "./node_modules/bulma/bulma.sass";
