chore(desp): upgrade parcel
I also fixed the html as it gave an error.
https://parceljs.org/blog/rc0/

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="section">
       <div class="container"></div>
     </section>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
   <style lang="scss">
     @import "./node_modules/bulma/bulma.sass";
